crates/config/src/snapshots/config__appearance__tests__the_noir_preset_names_every_option_it_changes.snap
---
source: crates/config/src/appearance.rs
expression: "preset_options(AppearancePreset::Noir)"
---
Appearance {
    cover_style: Milkdrop,
    cover_brackets: Shown,
    format_chips: Shown,
    speed_chip: Always,
    progress_remaining: Remaining,
    key_hints: Shown,
    animations: On,
    layout_mode: Auto,
}
