crates/config/src/snapshots/config__appearance__tests__the_stock_appearance_is_every_vocabulary_default.snap
---
source: crates/config/src/appearance.rs
expression: "Appearance::default()"
---
Appearance {
    cover_style: Vinyl,
    cover_brackets: Hidden,
    format_chips: Hidden,
    speed_chip: Always,
    progress_time: Elapsed,
    key_hints: Shown,
    animations: On,
    layout_mode: Auto,
}
